# decepticons

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  STYLE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: CHRONOHORN_KERNEL_BOUNDARY.md  EXPORT_ABI.md  architecture.md  chronohorn_boundary.md  control_surface.md  downstream_patterns.md  kernel_matrix.md  landscape.md  lineage.md  next_pass.md  related_work.md
examples/: README.md  quickstart.py
scripts/: build_og.py  release.sh
site/: 404.html  CNAME  README.md  index.html  robots.txt  sitemap.xml  styles.css
tests/: README.md  test_adaptive_substrate_plumbing.py  test_agreement_export_example.py  test_artifacts.py  test_artifacts_audits.py  test_bidirectional_analysis_example.py  test_boundary_surfaces.py  test_brelt_like.py  test_bridge_export_isolation.py  test_bridge_proxy_example.py  test_cache_repair_example.py  test_carving_machine_like_fidelity.py  test_causal_adapter.py  test_causal_descendant_refactors.py  test_causality.py  test_coder.py  test_control.py  test_delay.py  test_dependency_firewall.py  test_diagnostics.py  test_diagnostics_examples.py  test_diagnostics_tools.py  test_eval.py  test_exact_context.py  test_example_projects.py  test_experts.py  test_factories.py  test_feature_export_example.py  test_field_reconstruction_example.py  test_frontier_boundaries.py  test_gating.py  test_hierarchical.py  test_hierarchical_predictive_example.py  test_hierarchical_views.py  test_kernel_project_split.py  (+29 more)
(+104 files in other folders)
