[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-predictive-coder"
version = "0.1.0"
description = "A small, literature-anchored predictive coding toolkit for byte streams, adaptive patching, and reservoir latents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Open Predictive Coder contributors"},
]
dependencies = [
  "numpy>=1.26",
]
keywords = [
  "predictive-coding",
  "reservoir-computing",
  "sequence-modeling",
  "compression",
  "bytes",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/asuramaya/open-predictive-coder"
Repository = "https://github.com/asuramaya/open-predictive-coder"

[project.scripts]
opc = "open_predictive_coder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

